plugins {
	id 'org.springframework.boot' version '2.5.5'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'com.rodrigopinho.java17'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

tasks.withType(JavaCompile) {
	options.compilerArgs += '--enable-preview'
}
tasks.withType(Test) {
	jvmArgs += "--enable-preview"
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}
